--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,12 @@
         <item>Progitech</item>
         <item>Ricoh</item>
     </string-array>
+    <string-array name="type_fermeture">
+        <item>Call in</item>
+        <item>Mise a jour</item>
+        <item>Suspend</item>
+        <item>Fermeture</item>
+    </string-array>
     <string-array name="heures_array">
         <item>01</item>
         <item>02</item>
