Test multitech - non fonctionnel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,9 @@
         <item>Chargeur IWL</item>
         <item>ICM122-ICMP</item>
         <item>ICT220_M16</item>
+        <item>ICT220_M32</item>
         <item>ICT250_M16</item>
+        <item>ICT250_M32</item>
         <item>IPP320 E404 V2</item>
         <item>IPP320 E404 V3</item>
         <item>IPP320 E501 V2</item>
