--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,9 @@
     <string-array name="multitech_operation">
         <item>Install</item>
         <item>Deinstall</item>
+        <item>Repair on site</item>
+        <item>DOA</item>
+        <item>Lost</item>
     </string-array>
     <string-array name="multitech_type">
         <item>5310 EMV</item>
@@ -68,5 +71,6 @@
         <item>IWL220_M32</item>
         <item>IWL250_M16</item>
         <item>IWL250_M32</item>
+        <item>SIM Card</item>
     </string-array>
 </resources>
