--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,8 +184,9 @@
         "\nPar l'intranet de CPU."
         "\nGénéral : https://intranet.cpu.qc.ca/intranet/stcpu/"
         "\nJean-Coutu : https://intranet.cpu.qc.ca/intranet/pjc/"
-        "\n\nUser : bureautech laurentides - Password : 974BUR265"
-        "\n\nMcDonald : intranet CPU + Road Warrior Fujitsu : "
+        "\nUser : bureautech laurentides - Password : 974BUR265"
+        "\n\nMcDonald : intranet CPU + Road Warrior Fujitsu : https://iportal.shopfujitsu.com/portal/page/portal/RoadWarrior/Login"
+        "\nLogin : inclus dans l'appel Fujitsu (ex: cpuottawa1@cpu.ca   Password : welcome1"
         "\n\n\n<b><u>Support</u></b>\n"
         "\nTelus = CPU 1-888-681-6974 Option 777"
         "\nAutre contrat CPU = 1-888-681-6974 Option 888"
@@ -213,19 +214,103 @@
         "\n\n\n\n\n\n\n\n\n"
     </string>
     <string name="aidememoireCompugen">
-        "<b><u>Réception</u></b>\nConfirmer par courriel et donner ETA"
+        "<b><u>Réception</u></b>\nPar courriel + confirmation sur cellulaire du technicien de garde le soir et les fins de semaine"
+        "\n(noter le nom de la personne sur votre Bavard Bureautech)."
+        "\n\nPetro Canada =Envoyé un ETA à DutyManagers pour qu’ils soient au courant 1-888-362-8302 Opt 1 (24Hrs).!"
+        "\n\n"Pour les autres clients cela n’est pas nécessaire de fournir un eta."
+        "\nLe soir et les fins de semaines le technicien doit faire ces updates sur l’intranet de COMPUGEN"
+        "\n\nintrantet Compugen = https://emerge.compugen.com/emerge/tarupdate"
+        "\nLogin = V-BUREAU  mot de passe = password) ."
         "\n\n\n<b><u>Bon de travail</u></b>\n"
-        "\nBon de travail COMPUCOM avec le Bavard Bureautech"
+        "\nBon de travail Bureautech avec le Bavard Bureautech."
         "\n\n\n<b><u>Call in</u></b>\n"
-        "\nPendant les heures de bureau, appeler le dispatch Bureautech."
-        "\nN.B. : On n’en fait pas pour ce sous-traitant le soir et les fins de semaine."
+        "\nLe technicien doit faire ces updates sur l’intranet de COMPUGEN"
+        "\nintranet Compugen = https://emerge.compugen.com/emerge/tarupdate "
+        "\nLogin = V-BUREAU  mot de passe = password) ."
         "\n\n\n<b><u>Support</u></b>\n"
-        "\nYves Baillargeon = 1-800-268-4867 poste 78851  / EN dehors des heures de bureau = 1-800-668-6574"
-        "\nShell = 1-416-456-5710"
+        "\nPetro Canada (pin pad activation) = 1-888-676-1888"
+        "\nSupport Petro = Sepehr Naserkhaki 418-527-1912 OU 1-877-439-4093 OU Dispatch team 1-800-353-2933"
+        "\nSAAQ = Dupont au 418-528-3333 ext.85829 OU Alexandra Paquette 1-418-528-3789"
+        "\nBNC = Niv1 1-877-641-2643 Et Niv2 1-800-318-8245"
         "\n\n\n<b><u>Call out et fermeture</u></b>\n"
-        "\nPendant les heures de bureau, appeler le dispatch Bureautech."
-        "\nLe soir et les fins de semaine on ferme l’appel avec le support technique.  Ou par courriel à quebecsubscanada@compucom.com et mettre dispatch1@bureautech.ca  en copie indiquer dans votre message que le document de fermeture est a suivre."
-        "\n(Noter le nom de la personne sur votre Bavard Bureautech)."
+        "\n<b><font color="red">Pour les appels SAAQ = fermer et/ou mettre à jour vos billets de la SAAQ directement avec le centre d’appel de la SAAQ au 418-528-4690 x0 AVANT DE QUITTER LE SITE.  S’il est impossible pour vous de le faire, svp contacter Alexandra Paquet 418-528-3789 qui sera en mesure de le faire pour vous</font></b>"
+        "\n\nEn journée avec dispatch Bureautech (intranet Compugen = https://emerge.compugen.com/emerge/tarupdate "
+        "\nLogin = V-BUREAU  mot de passe = password) ."
+        "\n\n\n\n\n\n\n\n\n"
+    </string>
+    <string name="aidememoireMaxwell">
+        "<b><u>Réception</u></b>\nPar courriel + confirmation sur cellulaire du technicien de garde le soir et les fins de semaine"
+        "\n\n\n<b><u>Bon de travail</u></b>\n"
+        "\nBon de travail Maxwell."
+        "\n<font color="red">Si vous dépassez votre heure, il est très important de noter en détail les noms des personnes avec qui vous avez parlé et le plus possible d’informations pour se faire payer le temps dépassé.</font>"
+        "\n\n\n<b><u>Call in</u></b>\n"
+        "\nPas nécessaire pour ce sous-traitant."
+        "\n\n\n<b><u>Support</u></b>\n"
+        "\nWanderley Spinola = 1-877-661-6393 ou 1-514-209-9433"
+        "\nCorinne Malette = 1-514-386-1663 Extension = 7501"
+        "\nSupport TD = 1-800-727-1504"
+        "\nPour swap Tim Hortons = 1-800-265-5158"
+        "\nChase Paymentech technical support: 1-800-265-5158"
+        "\nFirst Data Technical Support: 1-800-430-3516 Option 1"
+        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
+        "\nPar courriel au maxdispatch@maxwellpaper.ca"
+        "\n\n\n<b><u>Commande de pièces</u></b>"
+        "\nAppelez Stéphane au 1-877-661-6393."
+        "\n\n\n\n\n\n\n\n\n"
+    </string>
+    <string name="aidememoireMSC">
+        "<b><u>Réception</u></b>\nPar courriel + confirmation sur cellulaire du technicien de garde le soir et les fins de semaine"
+        "\n<font color="red">Attention, pour les appels LOTO QUÉBEC les minutes sont chronométrées, il faut donc remettre en service la machine le plus rapidement possible.</font>"
+        "\n\n\n<b><u>Bon de travail</u></b>\n"
+        "\nBon de travail MSC."
+        "\n<font color="red">Si vous dépassez votre heure, il est très important de noter toutes vos actions pour que nous puissions faire payer le dépassement d’heure.</font>"
+        "\n\n\n<b><u>Call in</u></b>\n"
+        "\nPas nécessaire pour ce sous-traitant."
+        "\n\n\n<b><u>Support</u></b>\n"
+        "\nPM LOTO / LOTO / MSC = 1-800-265-7873"
+        "\nLoto-Québec (ligne d’urgence) = 1-800-361-8267"
+        "\nIOL = 1-800-268-7107"
+        "\nFAPAQ = 1-877-341-8293 Option 1 puis 2"
+        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
+        "\nFermeture de l’appel sur site par téléphone avec MSC au 1-800-265-7873."
+        "\n\n\n\n\n\n\n\n\n"
+    </string>
+    <string name="aidememoireNCR">
+        "<b><u>Réception</u></b>\nPar courriel + confirmation sur cellulaire du technicien de garde le soir et les fins de semaine."
+        "\nN.B. : Il faut donner un ETA pour l’appel ainsi qu'assigner un technicien et notez le nom de la personne qui appelle sur le cellulaire et demander à changer le statut de votre appel en DS car si vous allez sur place et qu’il est annulé entre-temps on ne sera pas payé."
+        "\n\n\n<b><u>Bon de travail</u></b>\n"
+        "\nSEJQ = Pad       SYSTEM et Guichet = Bon de travail bureautech + Bavard"
+        "\n\n\n<b><u>Call in</u></b>\n"
+        "\nPar courriel au mf230080@ncr.com ou appelez le dispatch en Serbie à votre arrivée au 1-877-270-3476 Code 2134."
+        "\nSi l’appel est un « first line », il faut bien faire attention à l’heure à laquelle il est dû. Si vous pensez que vous allez sauter cet appel, faites ouvrir un « second line » au 1-877-270-3476 code 2134."
+        "\n\n\n<b><u>Support</u></b>\n"
+        "\nLa liste des RTSS est envoyée sur les adresses courriels des techniciens tous les jours, sinon vous pouvez contactez le centre d’appels en Serbie au 1-877-270-3476 Code 2134. Il y a un support technique pour les appels Retails (Mc do, IGA,etc…) et pour les guichets BNC."
+        "\nPour les appels SEJQ contactez directement le 1-800-617-4499."
+        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
+        "\nSEJQ (VIDEO POKER)= Contacter SEJQ au 1-877-856-6698 puis le centre d’appel au 1-877-270-3476 code 2134 ou par courriel."
+        "\nSYSTEM et Guichet = Contacter le centre d’appel en Serbie au 1-877-270-3476 code 2134 ou par courriel"
+        "\nIGA = donner le nom de la personne qui signe votre bon de travail dans la fermeture."
+        "\n\n\n\n\n\n\n\n\n"
+    </string>
+    <string name="aidememoireProgitech">
+        "<b><u>Réception</u></b>\nPar courriel + confirmation sur cellulaire du technicien de garde le soir et les fins de semaine."
+        "\nPour les appels Global, il est important de prendre l’équipement indiqué sur le bon de travail Apple Express."
+        "\n\n\n<b><u>Bon de travail</u></b>\n"
+        "\nImprimez les documents PDF envoyés par courriel + y joindre copie du waybill UPS en cours."
+        "\n\n\n<b><u>Call in</u></b>\n"
+        "\nPas nécessaire pour ce sous-traitant."
+        "\n\nDell"
+        "Il est obligatoire d’appeler Dell lorsque le temps sur site dépasse 1 h 00. Donc, avant d’appeler Progitech pour obtenir votre autorisation pour facturer plus d’une heure, vous devrez avoir obtenu le nom et badge de l’agent Dell. La raison pour laquelle le travail dure plus d’une heure et les informations de l’agent sont nécessaires pour que nous puissions facturer Unisys, d’où l’importance de nous les fournir."
+        "\n\nLexmark"
+        "Il est obligatoire d’appeler Lexmark lorsque le temps sur site dépasse 1 h 30. Donc, avant d’appeler Progitech pour obtenir votre autorisation pour facturer plus de 1h30, vous devrez avoir obtenu le nom de l’agent Lexmark. La raison pour laquelle le travail dure plus d’une heure et les informations de l’agent sont nécessaires pour que nous puissions facturer Unisys, d’où l’importance de nous les fournir."
+        "Faute de ces informations, aucune autorisation ne sera fournie et aucun temps supplémentaire ne sera payé. "
+        "\n\nEt SVP, donner le plus de détail possible, autant à Dell qu’aux répartiteurs Progitech. "
+        "\n\nGlobal Payement Si votre appareil est DOA, il faut contacter Appel Express pour faire ouvrir un nouvel appel avec votre équipement de spare au 1-855-361-3488."
+        "\n\n\n<b><u>Support</u></b>\n"
+        "\nUnisys = 1-800-361-2139        Lexmark = 1-800-453-9787 PIN # 55156173"
+        "\n\n\n<b><u>Call out et fermeture</u></b>\n"
+        "\nSur l’intranet de Progitech https://service.progitech.com/mobile/index.php"
+        "\nou par téléphone avec Michel pour les appels Global ou Sabrina pour les autres."
         "\n\n\n\n\n\n\n\n\n"
     </string>
     <string name="action_settings">Settings</string>
